# simple-zarr-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  test_and_deploy.yml
simple_zarr_server/: __init__.py  cli.py  server.py
simple_zarr_server/_tests/: test_simple_zarr_server.py
src/simple_zarr_server/: __init__.py  _version.py  cli.py  server.py
tests/: test_simple_zarr_server.py
