[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simple-zarr-server"
description = "A simple server for sharing zarr over HTTP."
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
}
license = { text = "BSD-3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.0",
    "zarr>=2.4.0",
    "starlette>=0.13.6",
    "uvicorn>=0.11.6",
]
urls = { homepage = "https://github.com/manzt/simple-zarr-server" }

[project.scripts]
simple-zarr-server = "simple_zarr_server.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "simple_zarr_server/_version.py"
