[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simple-zarr-server"
description = "A simple server for sharing zarr over HTTP."
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
license = { text = "BSD-3" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.0",
    "zarr>=2.14.0",
    "starlette>=0.13.6",
    "uvicorn>=0.11.6",
]
urls = { homepage = "https://github.com/manzt/simple-zarr-server" }

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "ruff",
    "httpx", # for testing starlette
]

[project.scripts]
simple-zarr-server = "simple_zarr_server.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "simple_zarr_server/_version.py"

[too.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
fmt = [
    "black .",
    "ruff --fix .",
]
check = [
    "black --check --diff .",
    "ruff .",
]
test = "pytest . --cov anywidget --color=yes --cov-report term-missing"

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",    # style errors
    "F",    # flake
    # "D",    # pydocstyle
    "I001", # isort
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = ["E501"] # ignore line-length, enforced by black
