[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simple-zarr-server"
description = "A simple server for sharing zarr over HTTP."
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
license = { text = "BSD-3" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.0",
    "zarr>=2.4.0",
    "starlette>=0.13.6",
    "uvicorn>=0.11.6",
]
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/manzt/simple-zarr-server#readme"
Issues = "https://github.com/manzt/simple-zarr-server/issues"
Source = "https://github.com/manzt/simple-zarr-server"

[project.scripts]
simple-zarr-server = "simple_zarr_server.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "httpx",
  "coverage[toml]>=6.5",
]

[tool.hatch.envs.default.scripts]
typing = "mypy --strict --install-types --non-interactive {args:src/simple_zarr_server tests}"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
]

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",    # style errors
    "F",    # flake
    # "D",    # pydocstyle
    "I001", # isort
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = ["E501"] # ignore line-length, enforced by black

[tool.ruff.isort]
known-first-party = ["simple_zarr_server"]

[tool.ruff.per-file-ignores]
"src/simple_zarr_server/__init__.py" = ["E402"]
